After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711628 - obexpush: Fix crashes when switching VTs
obexpush: Fix crashes when switching VTs
Status: RESOLVED FIXED
Product: gnome-user-share
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-user-share maintainers
gnome-user-share maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-07 18:14 UTC by Bastien Nocera
Modified: 2013-11-12 13:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
obexpush: Fix crashes when switching VTs (2.49 KB, patch)
2013-11-07 18:14 UTC, Bastien Nocera
none Details | Review
obex: Fix crashes when switching VTs (2.49 KB, patch)
2013-11-10 01:12 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-11-07 18:14:12 UTC
.
Comment 1 Bastien Nocera 2013-11-07 18:14:31 UTC
Created attachment 259211 [details] [review]
obexpush: Fix crashes when switching VTs

We need to unregister the object when disposing it, as otherwise
we'll be trying to register the agent when there's already one
registered (to a non-existant object).

This fixes a crash when fast-user switching, or simply switching
to a VT and coming back.

See https://bugzilla.redhat.com/show_bug.cgi?id=1008653
Comment 2 Bastien Nocera 2013-11-10 01:12:23 UTC
Created attachment 259397 [details] [review]
obex: Fix crashes when switching VTs

We need to unregister the object when disposing it, as otherwise
we'll be trying to register the agent when there's already one
registered (to a non-existant object).

This fixes a crash when fast-user switching, or simply switching
to a VT and coming back.

See https://bugzilla.redhat.com/show_bug.cgi?id=1008653
Comment 3 Bastien Nocera 2013-11-12 13:22:47 UTC
Attachment 259397 [details] pushed as 448bc5a - obex: Fix crashes when switching VTs